sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: not found: type int
		if(plusPetit(i:int,i+1:int)==false){
                               ^