sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var x:Boolean=true
	while(x){x=false
	for (i<-0 to getNombreValeurs()-2){
		if(plusPetit(i:int,i+1:int)==false){
			echange(i,i+1)
		x=true}
	}
 }
}